# drafts

./: .gitignore
airbnb/: flat_pdc.xcf
hotsui/: cauri.xcf
hotsui/cleaned/: cauri.photo.2.xcf  cauri.simplified.2.xcf  cauris.photo.1.xcf  graffiti.xcf  hotsui.xcf  splash.xcf  transpee.xcf
laama/: tree.xcf
moodule/jekyll-themes/: screenshot_consulting.xcf  screenshot_ethereal.xcf
moodule/signature/: ccc.html  ccc.svg.html
pastiche/: pyproject.toml  pytorch.ipynb  pytorch.py  tensorflow.ipynb  tensorflow.py
