[tool.poetry]
name = "pastiche"
version = "0.1.0"
description = ""
authors = ["moodule <moodule@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
torchvision = "^0.7.0"
matplotlib = "^3.3.2"
Pillow = "^8.0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
